PROJECT (ace_time_value)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (ace_time_value_SOURCE_FILES main.cpp) 
INCLUDE_DIRECTORIES (${ACE_INCLUDE_DIRS}) 
LINK_DIRECTORIES (${ACE_LIBRARY_DIRS}) 
ADD_DEFINITIONS (${ACE_DEFINITIONS})
ADD_EXECUTABLE (ace_time_value ${ace_time_value_SOURCE_FILES})
TARGET_LINK_LIBRARIES (ace_time_value ${ACE_LIBRARIES})

